# dotnet-bazel-example

./: .bazelrc  .gitignore  README.md  WORKSPACE  dotnet-bazel-example.sln
Queue.Consumer/: BUILD.bazel  Program.cs
Queue.Producer/: BUILD.bazel  Program.cs
