load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

core_binary(
  name = "src",
  srcs = [
      "Program.cs"
  ],
  deps = [
      "@io_bazel_rules_dotnet//dotnet/stdlib.core:mscorlib.dll",
      "@rabbitmq.client//:netcoreapp2.1_core",
  ],
  visibility = ["//visibility:public"],
)

container_image(
    name = "consumer",
    base = "@core_runtime//image",
    files = [":src"],
    cmd = ["dotnet src.exe"]
)
container_push(
   name = "push",
   image = ":consumer",
   format = "Docker",
   registry = "index.docker.io",
   repository = "thelgevold/rabbitmq-consumer",
   tag = "5"
)
